deploy: e166ea2c2fd51f112350cd59e9e4a2b04f306236

--- a/assignments/hw2/hw2.html
+++ b/assignments/hw2/hw2.html
@@ -1230,7 +1230,7 @@ e^{-\frac{1}{2} \omega c^2} \mathrm{PG}(\omega; b, 0) &amp;\propto \mathrm{PG}(\
 <li><p>Write the binomial pmf, <span class="math notranslate nohighlight">\(\mathrm{Bin}(y; N, \pi)\)</span>, in exponential family form.</p></li>
 <li><p>Derive a closed form expression for the KL divergence between two binomial distributions (with the same total count <span class="math notranslate nohighlight">\(N\)</span> but different probabilities <span class="math notranslate nohighlight">\(\pi\)</span>) in terms of the natural parameters.</p></li>
 <li><p>Write the KL divergence in terms of the mean parameters.</p></li>
-<li><p>Derive a closed form expression for the deviance residuals between a observed value <span class="math notranslate nohighlight">\(y\)</span> and a a predicted value <span class="math notranslate nohighlight">\(\hat{y} = N \pi\)</span> in terms of the mean parameters.</p></li>
+<li><p>Derive a closed form expression for the deviance residuals between a observed value <span class="math notranslate nohighlight">\(y\)</span> and a predicted value <span class="math notranslate nohighlight">\(\hat{y} = N \pi\)</span> in terms of the mean parameters.</p></li>
 </ol>
 </section>
 <section id="problem-2b-residual-analysis">
