--- a/lectures/09_mixtures.html
+++ b/lectures/09_mixtures.html
@@ -426,7 +426,7 @@ document.write(`
 <p>The joint distribution is,</p>
 <div class="amsmath math notranslate nohighlight">
 \[\begin{align*}
-    p(\mbpi, \{\mbtheta_k\}_{k=1}^K, \{(z_n, \mbx_n)\}_{n=1}^N \mid) 
+    p(\mbpi, \{\mbtheta_k\}_{k=1}^K, \{(z_n, \mbx_n)\}_{n=1}^N \mid \mbalpha) 
     &amp;\propto 
     p(\mbpi \mid \mbalpha) \prod_{k=1}^K p(\mbtheta_k) \prod_{n=1}^N \prod_{k=1}^K \left[ \pi_k \, p(\mbx_n \mid \mbtheta_k) \right]^{\bbI[z_n = k]}
 \end{align*}\]</div>
