deploy: bcda5ca0f05476673b638eebc299929f7a3236e6

--- a/lectures/12_rnns.html
+++ b/lectures/12_rnns.html
@@ -452,7 +452,7 @@ f(\mbh_t, \mbx_t; \mbtheta)
 <p>The “read-out” of a vanilla RNN is typically a simple linear or generalized linear model, depending on the type of observations. For example,</p>
 <div class="amsmath math notranslate nohighlight">
 \[\begin{align*}
-g(\mbh_t, \mbx_t; \mbtheta) &amp;= \mbC \mbx_t + \mbd,
+g(\mbh_t, \mbx_t; \mbtheta) &amp;= \mbC \mbh_t + \mbd,
 \end{align*}\]</div>
 <p>where</p>
 <ul class="simple">
