deploy: ec390de2357cf4ef8a7c0fb9df3a51d11a205b11

--- a/lectures/10_hmms.html
+++ b/lectures/10_hmms.html
@@ -560,7 +560,7 @@ distributions give the probability of the latent state <span class="math notrans
         p(z_{t}  \mid \mbx_{1:T})
         &amp;\propto \sum_{z_1=1}^K \cdots \sum_{z_{t-1}=1}^K \sum_{z_{t+1}=1}^K \cdots \sum_{z_T=1}^K p(\mbz_{1:T}, \mbx_{1:T}) \\
         &amp;= \nonumber
-        \bigg[ \sum_{z_{t}=1}^K \cdots \sum_{z_{t-1}=1}^K p(z_1) \prod_{s=1}^{t-1} p(\mbx_s  \mid z_s) \, p(z_{s+1}  \mid z_{s}) \bigg]
+        \bigg[ \sum_{z_{1}=1}^K \cdots \sum_{z_{t-1}=1}^K p(z_1) \prod_{s=1}^{t-1} p(\mbx_s  \mid z_s) \, p(z_{s+1}  \mid z_{s}) \bigg]
         \times  p(\mbx_t  \mid z_t)   \\
         &amp;\qquad \times \bigg[ \sum_{z_{t+1}=1}^K \cdots \sum_{z_T=1}^K \prod_{u=t+1}^T p(z_{u}  \mid z_{u-1}) \, p(\mbx_u  \mid z_u) \bigg] \\
         &amp;= \alpha_t(z_t) \times p(\mbx_t  \mid z_t) \times \beta_t(z_t)
