deploy: de58f3296b0b71dedb2c5b4822e5af2c8298fb4c

--- a/lectures/10_hmms.html
+++ b/lectures/10_hmms.html
@@ -578,8 +578,8 @@ recursively too,</p>
 \begin{aligned}
         \beta_t(z_t)
         &amp;\triangleq \sum_{z_{t+1}=1}^K \cdots \sum_{z_T=1}^K \prod_{u=t+1}^T p(z_{u}  \mid z_{u-1}) \, p(\mbx_u  \mid z_u) \\
-        &amp;= \sum_{z_{t+1}=1}^K p(z_{t+1}  \mid z_t) \, p(\mbx_{t_1}  \mid z_{t+1}) \left(\sum_{z_{t+2}=1}^K \cdots \sum_{z_T=1}^K \prod_{u=t+2}^T p(z_{u}  \mid z_{u-1}) \, p(\mbx_u  \mid z_u) \right) \\
-        &amp;= \sum_{z_{t+1}=1}^K p(z_{t+1}  \mid z_t) \, p(\mbx_{t_1}  \mid z_{t+1}) \, \beta_{t+1}(z_{t+1}).
+        &amp;= \sum_{z_{t+1}=1}^K p(z_{t+1}  \mid z_t) \, p(\mbx_{t+1}  \mid z_{t+1}) \left(\sum_{z_{t+2}=1}^K \cdots \sum_{z_T=1}^K \prod_{u=t+2}^T p(z_{u}  \mid z_{u-1}) \, p(\mbx_u  \mid z_u) \right) \\
+        &amp;= \sum_{z_{t+1}=1}^K p(z_{t+1}  \mid z_t) \, p(\mbx_{t+1}  \mid z_{t+1}) \, \beta_{t+1}(z_{t+1}).
     \end{aligned}
 \end{split}\]</div>
 <p>For the base case, let <span class="math notranslate nohighlight">\(\beta_T(z_T) = 1\)</span>.</p>
