--- a/lectures/11_vaes.html
+++ b/lectures/11_vaes.html
@@ -611,7 +611,7 @@ where $r(\mblambda_n, \mbepsilon_n) = \mbmu_n + \mbsigma_n \mbepsilon_n$. -->
 \end{align*}\]</div>
 <p>for some implicit and generally nonlinear function <span class="math notranslate nohighlight">\(f^\star\)</span>.</p>
 <p>VAEs learn an approximation to <span class="math notranslate nohighlight">\(f^\star(\mbx_n, \mbtheta)\)</span> with an <strong>inference network</strong>, a.k.a. <strong>recognition network</strong> or <strong>encoder</strong>.</p>
-<p>The inference network is (yet another) neural network that takes in a data point <span class="math notranslate nohighlight">\(\mbx_n\)</span> and outputs variational parameters <span class="math notranslate nohighlight">\(\mbz_n\)</span>,</p>
+<p>The inference network is (yet another) neural network that takes in a data point <span class="math notranslate nohighlight">\(\mbx_n\)</span> and outputs variational parameters <span class="math notranslate nohighlight">\(\mblambda_n\)</span>,</p>
 <div class="amsmath math notranslate nohighlight">
 \[\begin{align*}
     \mblambda_n &amp; \approx f(\mbx_n, \mbphi),
