--- a/lectures/13_transformers.html
+++ b/lectures/13_transformers.html
@@ -409,20 +409,20 @@ A_{t,s} &amp;\propto \exp \left\{ \mbx_t^\top \mbx_s \right\}
 <p>Once normalized,</p>
 <div class="amsmath math notranslate nohighlight">
 \[\begin{align*}
-A_{t,s} &amp;= \frac{\exp \{ \mbx_t^\top \mbx_s\}}{\sum_{s'=1}^T \exp\{\mbx_t^\top \mbx_s\}}.
+A_{t,s} &amp;= \frac{\exp \{ \mbx_t^\top \mbx_s\}}{\sum_{s'=1}^T \exp\{\mbx_t^\top \mbx_{s'}\}}.
 \end{align*}\]</div>
 <p>(Note: we have dropped the superscript <span class="math notranslate nohighlight">\({}^{(m)}\)</span> for clarity in this section.)</p>
 <p>This approach implies that attention depends equally on all <span class="math notranslate nohighlight">\(D\)</span> dimensions of the embedding. In practice, some of those dimensions may convey different kinds of information that may be of greater or lesser relevance for the attention mechanism. One way to allow for this is to project the tokens into a feature space before computing the attention weights,</p>
 <div class="amsmath math notranslate nohighlight">
 \[\begin{align*}
-A_{t,s} &amp;= \frac{\exp \{ (\mbU \mbx_t)^\top (\mbU \mbx_s)\}}{\sum_{s'=1}^T \exp\{(\mbU \mbx_t)^\top (\mbU \mbx_s) \}}
+A_{t,s} &amp;= \frac{\exp \{ (\mbU \mbx_t)^\top (\mbU \mbx_s)\}}{\sum_{s'=1}^T \exp\{(\mbU \mbx_t)^\top (\mbU \mbx_{s'}) \}}
 \end{align*}\]</div>
 <p>where <span class="math notranslate nohighlight">\(\mbU \in \reals^{K \times D}\)</span> with <span class="math notranslate nohighlight">\(K &lt; D\)</span>.</p>
 <p>Still, the numerator in this attention weight is symmetric. If we think of the attention weight as specifying how relevant token <span class="math notranslate nohighlight">\(\mbx_s\)</span> is to updating the feature representation for token <span class="math notranslate nohighlight">\(\mbx_t\)</span>, then directionality may matter. Personifying the tokens a bit, <span class="math notranslate nohighlight">\(\mbx_t\)</span> may need to know a certain kind of information to update its representation, and <span class="math notranslate nohighlight">\(\mbx_s\)</span> may be able to provide that information, but the converse need not be true.</p>
 <p>Transformers use a more general form of attention to address this asymmetry,</p>
 <div class="amsmath math notranslate nohighlight">
 \[\begin{align*}
-A_{t,s} &amp;= \frac{\exp \{ (\mbU_q \mbx_t)^\top (\mbU_k \mbx_s)\}}{\sum_{s'=1}^T \exp\{(\mbU_q \mbx_t)^\top (\mbU_k \mbx_s) \}},
+A_{t,s} &amp;= \frac{\exp \{ (\mbU_q \mbx_t)^\top (\mbU_k \mbx_s)\}}{\sum_{s'=1}^T \exp\{(\mbU_q \mbx_t)^\top (\mbU_k \mbx_{s'}) \}},
 \end{align*}\]</div>
 <p>where <span class="math notranslate nohighlight">\(\mbU_q \mbx_t \in \reals^{K}\)</span> are the <strong>queries</strong> and <span class="math notranslate nohighlight">\(\mbU_k \mbx_s \in \reals^{K}\)</span> are the <strong>keys</strong>.</p>
 <p>The parameters <span class="math notranslate nohighlight">\(\mbU_q \in \reals^{K \times D}\)</span> and <span class="math notranslate nohighlight">\(\mbU_k \in \reals^{K \times D}\)</span> are the two parameters defining the self-attention mechanism.</p>
@@ -431,7 +431,7 @@ A_{t,s} &amp;= \frac{\exp \{ (\mbU_q \mbx_t)^\top (\mbU_k \mbx_s)\}}{\sum_{s'=1}
 <p>To enforce causality in the attention layer, we simply zero out the upper triangular part of the attention matrix and normalize the rows appropriately,</p>
 <div class="amsmath math notranslate nohighlight">
 \[\begin{align*}
-A_{t,s} &amp;= \frac{\exp \{ (\mbU_q \mbx_t)^\top (\mbU_k \mbx_s)\}}{\textcolor{red}{\sum_{s'=1}^{t}} \exp\{(\mbU_q \mbx_t)^\top (\mbU_k \mbx_s)\}} \cdot \bbI[t \geq s].
+A_{t,s} &amp;= \frac{\exp \{ (\mbU_q \mbx_t)^\top (\mbU_k \mbx_s)\}}{\textcolor{red}{\sum_{s'=1}^{t}} \exp\{(\mbU_q \mbx_t)^\top (\mbU_k \mbx_{s'})\}} \cdot \bbI[t \geq s].
 \end{align*}\]</div>
 </div>
 <div class="admonition-comparison-to-rnns admonition">
@@ -454,7 +454,7 @@ A_{t,s} &amp;= \frac{\exp \{ (\mbU_q \mbx_t)^\top (\mbU_k \mbx_s)\}}{\textcolor{
 <div class="amsmath math notranslate nohighlight">
 \[\begin{align*}
 A_{t,s}^{(m,h)} &amp;= 
-\frac{\exp \{ (\mbU_q^{(m,h)} \mbx_t^{(m-1)})^\top (\mbU_k^{(m,h)} \mbx_s^{(m-1)})\}}{\sum_{s'=1}^T \exp\{(\mbU_q^{(m,h)} \mbx_t^{(m-1)})^\top (\mbU_k^{(m,h)} \mbx_s^{(m-1)}) \}},
+\frac{\exp \{ (\mbU_q^{(m,h)} \mbx_t^{(m-1)})^\top (\mbU_k^{(m,h)} \mbx_s^{(m-1)})\}}{\sum_{s'=1}^T \exp\{(\mbU_q^{(m,h)} \mbx_t^{(m-1)})^\top (\mbU_k^{(m,h)} \mbx_{s'}^{(m-1)}) \}},
 \end{align*}\]</div>
 <p>is an attention weight at layer <span class="math notranslate nohighlight">\(m\)</span> and head <span class="math notranslate nohighlight">\(h\)</span> for <span class="math notranslate nohighlight">\(h=1,\ldots,H\)</span>. (Now you see why we dropped superscripts above — the notation is a handful!)</p>
 <p>The outputs of the attention heads are either concatenated or linearly combined,</p>
