--- a/lectures/16_diffusion.html
+++ b/lectures/16_diffusion.html
@@ -483,7 +483,7 @@ Since there are no learnable parameters in the noising process, the objective si
 <div class="amsmath math notranslate nohighlight">
 \[\begin{align*}
 \cL(\theta)
-&amp;= \E_{q(x_0)}  \E_{q(x_t, x_{t+1} \mid x_0)} \left[ \sum_{t=0}^{T-1} \log p(x_t \mid x_{t+1}; \theta) \right] \\
+&amp;= \E_{q(x_0)} \sum_{t=0}^{T-1} \E_{q(x_t, x_{t+1} \mid x_0)} \left[  \log p(x_t \mid x_{t+1}; \theta) \right] \\
 &amp;\propto \E_{q(x_0)} \mathbb{E}_{t \sim \mathrm{Unif}(0,T-1)} \E_{q(x_t, x_{t+1} \mid x_0)} \left[ \log p(x_t \mid x_{t+1}; \theta) \right]
 \end{align*}\]</div>
 <p>which only depends on pairwise conditionals.</p>
@@ -738,8 +738,8 @@ q(x_t)
 <p>Specifically, the second term is the <strong>Stein score function</strong> of the marginal probability,</p>
 <div class="amsmath math notranslate nohighlight">
 \[\begin{align*}
-\nabla_{x} \log q(x_{t+1})
-&amp;= \frac{\nabla_{x} q(x_{t+1})}{q(x_{t+1})}  \\
+\nabla_{x} \log q_t(x_{t+1})
+&amp;= \frac{\nabla_{x} q_t(x_{t+1})}{q_t(x_{t+1})}  \\
 &amp;=\frac{\frac{1}{n} \sum_{i=1}^n \mathrm{N}(x_{t+1} \mid \lambda_{t|0} x_0^{(i)}, \sigma_{t|0}^2) \left(-\frac{(x_{t+1} - \lambda_{t|0}x_0^{(i)})}{\sigma_{t|0}^2} \right)}{\frac{1}{n} \sum_{j=1}^n \mathrm{N}(x_{t+1} \mid \lambda_{t|0} x_0^{(j)}, \sigma_{t|0}^2) } \\
 &amp;= \sum_{i=1}^n w_i(x_{t+1}) \left(\frac{\lambda_{t|0}x_0^{(i)} - x_{t+1}}{\sigma_{t|0}^2} \right)
 \end{align*}\]</div>
